# Internal-DLL-Game-Hacking

./: .gitignore  CMakeLists.txt  README.md  cmake-err.txt  exports.def
Loader/: Main.cpp
Loader/ShellCode/: GetProcAddress.cpp  GetProcAddress.h  StartRoutine.cpp  StartRoutine.h
src/: export.cpp
src/Game/: Game.h  GameManagement.cpp  GameManagement.h
src/Game/AssaultCube/: AssaultCube.cpp  AssaultCube.h
src/Game/HackedGames/CounterStrike/: Bhop.h  CounterStrike.cpp  CounterStrike.h  HackManager.h
src/HackedGames/AssaultCube/: AssaultCube.cpp
src/HackedGames/CounterStrike/: Bhop.cpp  CounterStrike.cpp  Recoil.cpp  Recoil.h
src/Obfuscation/HideProcess/: HideProcess.cpp  HideProcess.h
src/Obfuscation/Polymorphism/: Junk.cpp  Mutate.cpp  Polymorphic.cpp  Polymorphic.h  Primitives.cpp
src/Obfuscation/Polymorphism/Helpers/: Helper.cpp  Helper.h
src/Obfuscation/Polymorphism/Mutators/: Mutate.cpp  Mutate.h
src/Obfuscation/Registery/: ObfuscateMethods.cpp  ObfuscateMethods.h
src/Obfuscation/SpoofReturnAddress/: SpoofRet.cpp  SpoofRet.h  SpoofReturnAddress.cpp  spoofer.asm
src/core/: DllEntry.cpp  Main.h  dllmain.cpp  hooks.cpp  hooks.h  main.cpp
src/ext/ade32/: ADE32.cpp  ADE32.h
src/ext/reserved_windows/ntdll/: NtDllHandler.cpp  NtDllHandler.h  ntdll.h
src/gui/: Category.h  Feature.h  Gui.cpp  Gui.h
src/sdk/Logger/: Logger.cpp  Logger.h
src/sdk/Math/: Math.h  Vec3.inl
src/sdk/Memory/: Memory.cpp  Memory.h  PatternScan.cpp  PatternScan.h
src/sdk/Test/: Test.cpp  Test.h
src/sdk/Utils/: Helper.cpp  Helper.h
x64/Debug/: ProcessHooker.dll.recipe  ProcessHooker.ilk  vc145.idb
x64/Debug/ProcessHooker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ProcessHooker.lastbuildstate  link.command.1.tlog  link.secondary.1.tlog
